--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -24,12 +25,11 @@
         android:theme="@style/Theme.MyDuka"
         tools:targetApi="31">
         <activity
-<<<<<<< HEAD
+
             android:name=".Earnings"
             android:exported="false" />
         <activity
-=======
->>>>>>> 0199aa4cd00cbe71791ed8d2b830cb9e88d1463a
+
             android:name=".ManageExpiredProducts"
             android:exported="false" />
         <activity
